--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -2,12 +2,12 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>Steckbrief</title>
+<title>Steckbrief Robin</title>
 <style>
 body {
 	font-family: arial;
 	font-size: small;
-	background: #eeeee
+	background: rgb(0, 162, 255)
 }
 </style>
 </head>
