--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,7 +7,10 @@
 body {
 	font-family: arial;
 	font-size: small;
-	background: rgb(0, 162, 255)
+	background: rgb(0, 162, 255);
+	background-image: url(2021-11-22_Linachtal.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
 </style>
 </head>
