--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,6 +15,9 @@ body {
 </style>
 </head>
 <body>
+	<p href="https://dieerdnuss.github.io/EIA_2/">Repository EIA2</p>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
+	<p href="/L01.1_RandomPoem/RandomPoem.html">L01.1 RandomPoetry, 25.03.22</p>
+	<p href="">L01.2, 25.03.22</p>
 </body>
 </html>
