--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -2,17 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<link rel="stylesheet" href="/Steckbrief/steckbrief_style.css">
 <title>Steckbrief Robin</title>
-<style>
-body {
-	font-family: arial;
-	font-size: small;
-	background: rgb(0, 162, 255);
-	background-image: url(2021-11-22_Linachtal.jpg);
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-</style>
+
 </head>
 <body>
 	<p href="https://dieerdnuss.github.io/EIA_2/">Repository EIA2</p>
