--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,9 +7,9 @@
 
 </head>
 <body>
-	<p href="https://dieerdnuss.github.io/EIA_2/">Repository EIA2</p>
+	<a href="https://dieerdnuss.github.io/EIA_2/">Repository EIA2</a><br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<p href="/L01.1_RandomPoem/RandomPoem.html">L01.1 RandomPoetry, 25.03.22</p>
-	<p href="">L01.2, 25.03.22</p>
+	<a href="/L01.1_RandomPoem/RandomPoem.html">L01.1 RandomPoetry, 25.03.22</a><br>
+	<a href="">L01.2, 25.03.22</a>
 </body>
 </html>
