--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,7 +9,7 @@
 <body>
 	<a href="https://dieerdnuss.github.io/EIA_2/">Repository EIA2</a><br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="/L01.1_RandomPoem/RandomPoem.html">L01.1 RandomPoetry, 25.03.22</a><br>
+	<a href="/L01.1_RandomPoem/RandomPoem.html">L01.1 RandomPoem, 25.03.22</a><br>
 	<a href="">L01.2, 25.03.22</a>
 </body>
 </html>
