--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,9 +7,9 @@
 
 </head>
 <body>
-	<a href="https://github.com/DieErdnuss/EIA_2">Repository EIA2</a><br>
+	<a href="https://github.com/DieErdnuss/EIA_2" target="_blank">Repository EIA2</a><br>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="/L01.1_RandomPoem/RandomPoem.html">L01.1 RandomPoem, 25.03.22</a><br>
-	<a href="">L01.2, 25.03.22</a>
+	<a href="/L01.1_RandomPoem/RandomPoem.html" target="_blank">L01.1 RandomPoem, 25.03.22</a><br>
+	<a href="" target="_blank">L01.2, 25.03.22</a>
 </body>
 </html>
