Links RandomPoem update

--- a/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html
+++ b/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/L01.1_RandomPoem/RandomPoem.js"></script>
-    <link rel="shortcut icon" href="/L01.1_RandomPoem/img/HP.png" type="image/x-icon">
+    <script src="/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.js"></script>
+    <link rel="shortcut icon" href="/L01_Recap&Foundation/L01.1_RandomPoem/img/HP.png" type="image/x-icon">
     <title>Zufallsgedicht</title>
 </head>
 <body style="background-color: rgb(56, 56, 56);">
