RandPoem Script Link

--- a/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html
+++ b/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.js"></script>
+    <script src="RandomPoem.js"></script>
     <link rel="shortcut icon" href="/L01_Recap&Foundation/L01.1_RandomPoem/img/HP.png" type="image/x-icon">
     <title>Zufallsgedicht</title>
 </head>
