--- a/L01_Recap&Foundation/Test_Variablen.html
+++ b/L01_Recap&Foundation/Test_Variablen.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="Test_Variablen.js"></script>
+    <script src="/L01_Recap&Foundation/greet.js"></script>
+    <link rel="shortcut icon" href="None" type="image/x-icon">
     <title>Übung_Variablen</title>
 </head>
 <body>
-    <header>Test mit Variabeln und Typescript</header>
-    
-</body>
+    <header>Test mit Variabeln und Typescript</header><br>
+<input type="text" placeholder="Eingabe"></body>
 </html>
