--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,7 +10,7 @@
 	<a href="https://github.com/DieErdnuss/EIA_2" target="_blank">Repository EIA2</a><br>
 	<p></p>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
-	<a href="/EIA_2/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html" target="_blank">L01.1 RandomPoem, 25.03.22</a><br>
-	<a href="/EIA_2/L01_Recap&Foundation/L01.2_Boxes/2022-03-27_L01.2_Boxes_TraceTable.pdf" target="_blank">L01.2_Boxes TraceTable</a>
+	<a href="https://dieerdnuss.github.io/EIA_2/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html" target="_blank">L01.1 RandomPoem, 25.03.22</a><br>
+	<a href="../L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html" target="_blank">L01.2_Boxes TraceTable</a>
 </body>
 </html>
