--- a/L01_Recap&Foundation/L01.2_Boxes/index.html
+++ b/L01_Recap&Foundation/L01.2_Boxes/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/L01_Recap&Foundation/L01.2/L01.2.css">
-    <script src="/L01_Recap&Foundation/L01.2/L01.2.js"></script>
+    <link rel="stylesheet" href="../L01.2_Boxes/boxes.css">
+    <script src="../L01.2_Boxes/L01.2_Boxes.js"></script>
+    <link rel="shortcut icon" href="../L01.2_Boxes/img/RKF_WÜrfel_Icon_100x97.png" type="image/x-icon">
     <title>L01.2</title>
 </head>
 <body>
+
     <p>L01.2 Überprüfen</p>
     
 </body>
