--- a/L01_Recap&Foundation/L02.1_EventInspector/EventInspector.html
+++ b/L01_Recap&Foundation/L02.1_EventInspector/EventInspector.html
@@ -8,10 +8,17 @@
     <script src="../L02.1_EventInspector/EventInspector.js"></script>
     <title>Event Inspector - Robin Knüttel</title>
 </head>
-<body>
+<body id="wrapper">
     <header>
         <h1>Event-Exercise</h1>
+        <p>L02.1 Event-Exercise - Robin Knüttel</p>
     </header>
+    <div id="div0"></div>
+    <div id="div1"></div>
+    <span id="span">
+        <p id="target"></p>
+        <p id="xy"></p>
+    </span>
     
 </body>
 </html>
