--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,5 +12,6 @@
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://dieerdnuss.github.io/EIA_2/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html" target="_blank">L01.1 RandomPoem, 25.03.22</a><br>
 	<a href="https://dieerdnuss.github.io/EIA_2/L01_Recap&Foundation/L01.2_Boxes/boxes.html" target="_blank">L01.2 Boxes, 30.03.22</a>
+	<a href="https://dieerdnuss.github.io/EIA_2/L02_Event/L02.1_EventInspector/EventInspector.html"></a>
 </body>
 </html>
