Boxes Activity Chart

--- a/L01_Recap&Foundation/L01.2_Boxes/boxes.html
+++ b/L01_Recap&Foundation/L01.2_Boxes/boxes.html
@@ -13,7 +13,7 @@
     <header>
         <p>Robin Knüttel - L01.2 Boxes</p>
         <a href="../L01.2_Boxes/2022-03-27_L01.2_Boxes_TraceTable_RobinKnuettel.pdf" target="_blank">TraceTable</a>
-        <a href="Aktivitätsdiagramm">Aktivitätsdiagramm</a>
+        <a href="../L01.2_Boxes/2022-04-01_Robin_ActivitiDiagramm.pdf">Aktivitätsdiagramm</a>
     </header>
     
 
