--- a/TEST/Test_Variablen.html
+++ b/TEST/Test_Variablen.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/L01_Recap&Foundation/greet.js"></script>
+ 
     <link rel="shortcut icon" href="None" type="image/x-icon">
     <title>Übung_Variablen</title>
 </head>
 <body>
+    <input type="email" placeholder="E-Mail" :valid>
     <header>Test mit Variabeln und Typescript</header><br>
 <input type="text" placeholder="Eingabe"></body>
 </html>
