--- a/TEST/Test_Variablen.html
+++ b/TEST/Test_Variablen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
+    <script src="../TEST/Test_Variablen.js"></script>
     <link rel="shortcut icon" href="None" type="image/x-icon">
     <title>Übung_Variablen</title>
 </head>
