--- a/L02_Event/L02.2_Memory_Robin/memory_Robin.html
+++ b/L02_Event/L02.2_Memory_Robin/memory_Robin.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../L02.2_Memory_Robin/Memory_Robin.js"></script>
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="shortcut icon" href="../L02.2_Memory_Robin/img/favicon_memory.png" type="image/x-icon">
+    <link rel="stylesheet" href="../L02.2_Memory_Robin/Memory_Robin.css">
     <title>Memory_Robin</title>
 </head>
 <body>
@@ -13,9 +14,9 @@
     <input type="range" name="slider" id="slider" min="5" max="25" step="1" value="0"><br>
     Selected Pair Amount:<div id="output"></div><br>
 
-    Data
-    <p id="data"></p>
-    Pairs
-    <p id="pair"></p>
+    <div id="wrapper">      
+                                                                                        
+        
+    </div>
 </body>
 </html>
