--- a/L02_Event/L02.2_Memory_Robin/memory_Robin.html
+++ b/L02_Event/L02.2_Memory_Robin/memory_Robin.html
@@ -10,6 +10,8 @@
     <title>Memory_Robin</title>
 </head>
 <body>
+
+    <a href="../L02.2_Memory_Robin/L02.2_Memory_Konzept_RobinKnüttel.pdf">Konzept</a><br>
     Set Pair Value <br>
     <input type="range" name="slider" id="slider" min="5" max="25" step="1" value="0"><br>
     Selected Pair Amount:<div id="output"></div><br>
