--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,7 +13,7 @@
 	<a href="https://dieerdnuss.github.io/EIA_2/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html" target="_blank">L01.1 RandomPoem, 25.03.22</a><br>
 	<a href="https://dieerdnuss.github.io/EIA_2/L01_Recap&Foundation/L01.2_Boxes/boxes.html" target="_blank">L01.2 Boxes, 30.03.22</a><br>
 	<a href="https://dieerdnuss.github.io/EIA_2/L02_Event/L02.1_EventInspector/EventInspector.html" target="_blank">L02.1 EventInspektor, 02.04.22</a><br>
-	<a href="../L02_Event/L02.2_Memory_Robin/L02.2_Memory_Konzept_RobinKnüttel.pdf" target="_blank">L02.2 Memory Konzept, 21.04.22</a>
+	<a href="../L02_Event/L02.2_Memory_Robin/L02.2_Memory_Konzept_RobinKnüttel.pdf" target="_blank">L02.2 Memory Konzept, 21.04.22</a><br>
 	<a href="../L02_Event/L02.2_Memory_Robin/memory_Robin.html" target="_blank">L03.0 Memory, 21.04.2022</a><br>
 	
 </body>
