--- a/L02_Event/L02.2_Memory_Robin/Memory_Settings.html
+++ b/L02_Event/L02.2_Memory_Robin/Memory_Settings.html
@@ -50,7 +50,8 @@
                 <input type="radio" name="fontFamily" id="fontCourier" value="Courier">
             </fieldset>
         </div>
-        <button id="start">SPIEL STARTEN</button>
+        <a id="start" href="../L02.2_Memory_Robin/memory_Robin.html">SPIEL STARTEN</a>
+        
     </div>
 
    
