--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,6 +15,7 @@
 	<a href="https://dieerdnuss.github.io/EIA_2/L02_Event/L02.1_EventInspector/EventInspector.html" target="_blank">L02.1 EventInspektor, 02.04.22</a><br>
 	<a href="../L02_Event/L02.2_Memory_Robin/L02.2_Memory_Konzept_RobinKnüttel.pdf" target="_blank">L02.2 Memory Konzept, 21.04.22</a><br>
 	<a href="../L02_Event/L02.2_Memory_Robin/memory_Robin.html" target="_blank">L03.0 Memory, 21.04.2022</a><br>
-	
+	<a href="https://x.thunkable.com/copy/478f76f11f79c5160e0ba2c78ee84b12" target="_blank">L04 Thunkable ShoppingList, 1.5.2022</a>
+
 </body>
 </html>
