--- a/L04_Thunkable/Thunkable.html
+++ b/L04_Thunkable/Thunkable.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L04_Thunkable_Konzept</title>
+    <style>body{font-family: Arial, Helvetica, sans-serif;}</style>
 </head>
 <body>
     <h1>L04 Thunkable Shopping List</h1>
