--- a/L04_Thunkable/Thunkable.html
+++ b/L04_Thunkable/Thunkable.html
@@ -10,7 +10,7 @@
 <body>
     <h1>L04 Thunkable Shopping List</h1>
     <p>In Zusammenarbeit mit Aurel Wedding.</p>
-    <a href="../L04_Thunkable/2022-04-30_Thunkable_ShoppingList_AD.jpg" target="_blank">Konzept Activity Diagramm</a>
+    <a href="../L04_Thunkable/2022-04-30_Thunkable_ShoppingList_AD.jpg" target="_blank">Konzept Activity Diagramm</a><br>
     <a href="../L04_Thunkable/2022-04-30_Thunkable_ShoppingList_UI.jpg" target="_blank">Konzept User Interface</a>
 </body>
 </html>
