--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,7 +15,7 @@
 	<a href="https://dieerdnuss.github.io/EIA_2/L02_Event/L02.1_EventInspector/EventInspector.html" target="_blank">L02.1 EventInspektor, 02.04.22</a><br>
 	<a href="../L02_Event/L02.2_Memory_Robin/memory_Robin.html" target="_blank">L02.2 Memory + Konzept, 21.04.22</a><br>
 	<a href="../L02_Event/L02.2_Memory_Robin/Memory_Settings.html" target="_blank">L03 Memory-Settings, 21.04.2022</a><br>
-	<a href="https://x.thunkable.com/projectPage/6267be3160246f00120e5977" target="_blank">L04 Thunkable ShoppingList, 1.5.2022</a><a href="../L04_Thunkable/Thunkable.html">Thunkable Konzept</a> <br>
+	<a href="https://x.thunkable.com/projectPage/6267be3160246f00120e5977" target="_blank">L04 Thunkable ShoppingList, 1.5.2022</a><br><a href="../L04_Thunkable/Thunkable.html" target="_blank">Thunkable Konzept</a> <br>
 	<a href="../L04_Thunkable/Thunkable - Mozilla Firefox 2022-05-02 20-13-50.mp4" target="_blank">Thunkable_ShoppingList_Video</a><br>
 </body>
 </html>
