--- a/L08.2_CanvasStrand/CanvasStrand.html
+++ b/L08.2_CanvasStrand/CanvasStrand.html
@@ -10,7 +10,14 @@
     <title>Generative Art</title>
 </head>
 <body>
-    <canvas height="550" width="1000"></canvas>
+    <!-- <label for="PositionX">Position X</label>
+    <input type="range" name="PositionX" id="SliderX" min="0" max="100" step="1">
+    <label for="PositionY">Position Y</label>
+    <input type="range" name="PositionY" id="SliderY" min="0" max="100" step="1"> -->
+    
+    <canvas  width="2000" height="1200"></canvas>
+    <p id="WindowHeight">H</p>
+    <p id="WindowWidth"></p>
     
 </body>
 </html>
