--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -17,6 +17,8 @@
 	<a href="../L02_Event/L02.2_Memory_Robin/Memory_Settings.html" target="_blank">L03 Memory-Settings, 21.04.2022</a><br>
 	<a href="https://x.thunkable.com/projectPage/6267be3160246f00120e5977" target="_blank">L04 Thunkable ShoppingList, 1.5.2022</a><br><a href="../L04_Thunkable/Thunkable.html" target="_blank">Thunkable Konzept</a> <br>
 	<!-- <a href="../L04_Thunkable/Thunkable - Mozilla Firefox 2022-05-02 20-13-50.mp4" target="_blank">Thunkable_ShoppingList_Video</a><br> -->
-	<a href="../L08.1_Canvas/generative_Art.html" target="_blank">L08.1_Generative Art, 6.5.22</a><br>s
+	<a href="../L08.1_Canvas/generative_Art.html" target="_blank">L08.1_Generative Art, 6.5.22</a><br>
+	<a href="../L08.2_CanvasStrand/CanvasStrand.html" target="_blank">L08.2_Canvas Strand, 14.05.22</a><br>
+	
 </body>
 </html>
