--- a/L08.2_CanvasStrand/CanvasStrand.html
+++ b/L08.2_CanvasStrand/CanvasStrand.html
@@ -14,12 +14,13 @@
     <input type="range" name="PositionX" id="SliderX" min="0" max="100" step="1">
     <label for="PositionY">Position Y</label>
     <input type="range" name="PositionY" id="SliderY" min="0" max="100" step="1"> -->
-    <a href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_11_Pro.jpg" target="_blank">UI</a><br>
-    <a href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_29_Pro.jpg" target="_blank">UI_2</a><br>
-    <a href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_57_Pro.jpg" target="_blank">AD</a><br>
+    <a class="font" href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_11_Pro.jpg" target="_blank">UI</a>
+    <a class="font" href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_29_Pro.jpg" target="_blank">UI_2</a>
+    <a class="font" href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_57_Pro.jpg" target="_blank">AD</a>
+    <button id="reload">RELOAD</button>
     <canvas  width="2000" height="1200"></canvas>
-    <p id="WindowHeight">H</p>
-    <p id="WindowWidth"></p>
+    <p class="font"  id="windowHeight"></p>
+    <p class="font" id="windowWidth"></p>
     
 </body>
 </html>
