--- a/L09_Classes/classesUebung.html
+++ b/L09_Classes/classesUebung.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../Classes/classesUebung.js"></script>
+    <script src="../L09_Classes/Farm/Farm.js"></script>
     <title>Classes Übung</title>
 </head>
 <body>
