--- a/L09_Classes/L09.html
+++ b/L09_Classes/L09.html
@@ -9,8 +9,8 @@
 <body>
     <h1>McDonald Farm</h1>
     <p>Aufgabe in Zusammenarbeit mit Aurel Wedding.</p>
-    <a href="../L09_Classes/Farm/Konzept/Activity Diagram_Farm.drawio.pdf" target="_blank">Activity Diagram_Farm</a>   <br>
-    <a href="../L09_Classes/Farm/Konzept/ActivityDiagram_FarmAnimal.drawio.pdf" target="_blank">ActivityDiagram_FarmAnimal</a><br>
+    <a href="../L09_Classes/Farm/Konzept/Activity Diagram_Farm_NEW.pdf" target="_blank">Activity Diagram_Farm</a>   <br>
+    <a href="../L09_Classes/Farm/Konzept/ActivityDiagram_FarmAnimal_NEW.pdf" target="_blank">ActivityDiagram_FarmAnimal</a><br>
     <a href="../L09_Classes/Farm/Farm.html" target="_blank">Farm</a> 
 </body>
 </html>
