--- a/L09_Classes/Farm/Farm.html
+++ b/L09_Classes/Farm/Farm.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="../Farm/FarmAnimals.js"></script>
     <script src="../Farm/Farm.js"></script>
-    
-    <link rel="shortcut icon" href="../" type="image/x-icon">
+    <link rel="shortcut icon" href="../Farm/img/chicken-512-1764972413.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farm</title>
 </head>
