Calsses Star<nd

--- a/L09_OldMacDonald_Farm/McDonaldFarm.html
+++ b/L09_OldMacDonald_Farm/McDonaldFarm.html
@@ -6,9 +6,12 @@
     <script src="../L0.9_OldMacDonald_Farm/McDonaldFarm.js"></script>
     <link rel="stylesheet" href="../L0.9_OldMacDonald_Farm/McDonaldFarm.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>McDonald Farm</title>
 </head>
 <body>
+    <h1>Old McDonalds Farm</h1>
+
+  
     
 </body>
 </html>
