--- a/L09_ClassCanvasStrand/CanvasBeach.html
+++ b/L09_ClassCanvasStrand/CanvasBeach.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../L08.2_CanvasStrand/CanvasStrand.js"></script>
+    <script src="../L09_ClassCanvasStrand/Classes/BeachVector.js"></script>
+    <script src="../L09_ClassCanvasStrand/Classes/BeachCloud.js"></script>
+    <script src="../L09_ClassCanvasStrand/CanvasBeachMain.js"></script>
     <link rel="stylesheet" href="../L08.2_CanvasStrand/CanvasStrand.css">
     <link rel="shortcut icon" href="../L08.1_Canvas/img/45117a_1x1.png" type="image/x-icon">
     <title>Generative Art</title>
