--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -20,5 +20,7 @@
 	<a href="../L08.1_Canvas/generative_Art.html" target="_blank">L08.1_Generative Art, 6.5.22</a><br>
 	<a href="../L08.2_CanvasStrand/CanvasStrand.html" target="_blank">L08.2_Canvas Strand, 14.05.22</a><br>
 	<a href="../L09_Classes/L09.html" target="_blank">L09_Old McDonald Farm, 20.5.22 </a>
+	<a href="../L09_ClassCanvasStrand/CanvasBeach.html" target="_blank">L9.2 Canvas Beach Animation, 04.06.22</a><br>
+	<a href="../" target="_blank">L10 OldMacDonald Farm Subclasses, 04.05.22</a><br>
 </body>
 </html>
