--- a/L10.1_OldMacDonaldFarm Subclasses/Konzept/Konzept.html
+++ b/L10.1_OldMacDonaldFarm Subclasses/Konzept/Konzept.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <a href="../Konzept/Activity Diagram_Farm_Main.pdf" target="_blank">AD_Main</a><br>
-    <a href="../Konzept/ActivityDiagram_FarmAnimal.drawio" target="_blank">AD_Animal</a><br>
-    <a href="../Konzept/OldMacDonald_Farm_Classes.drawio" target="_blank">CD_Animal</a><br>
+    <a href="../Konzept/ActivityDiagram_FarmAnimal_Special.pdf" target="_blank">AD_Animal</a><br>
+    <a href="../Konzept/OldMacDonald_Farm_Classes.pdf" target="_blank">CD_Animal</a><br>
     
 </body>
 </html>
