--- a/L09_OldMacDonald_Farm/Farm/Farm.html
+++ b/L09_OldMacDonald_Farm/Farm/Farm.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="../Farm/FarmAnimals.js"></script>
     <script src="../Farm/Farm.js"></script>
+    <script src="../Farm/FarmAnimals.js"></script>
+    <script src="../class/Cow.js"></script>
     <link rel="shortcut icon" href="../Farm/img/chicken-512-1764972413.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farm</title>
 </head>
+
 <body>
     <h1>Open the Console.</h1>
-    
+
 </body>
+
 </html>
