--- a/L09_OldMacDonald_Farm/Farm/Farm.html
+++ b/L09_OldMacDonald_Farm/Farm/Farm.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="../Farm/Farm.js"></script>
-    <script src="../Farm/FarmAnimals.js"></script>
+    <script src="../class/Animal.js"></script>
     <script src="../class/Cow.js"></script>
+    <script src="../Farm/FarmMain.js"></script>
     <link rel="shortcut icon" href="../Farm/img/chicken-512-1764972413.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Farm</title>
