--- a/L09_ClassCanvasStrand/CanvasBeach.html
+++ b/L09_ClassCanvasStrand/CanvasBeach.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../L09_ClassCanvasStrand/Classes/BeachVector.js"></script>
     <script src="../L09_ClassCanvasStrand/Classes/BeachCloud.js"></script>
+    <script src="../L09_ClassCanvasStrand/Classes/BeachPalmTree.js"></script>
     <script src="../L09_ClassCanvasStrand/CanvasBeachMain.js"></script>
     <link rel="stylesheet" href="../L09_ClassCanvasStrand/CanvasBeach.css">
     <link rel="shortcut icon" href="../L08.1_Canvas/img/45117a_1x1.png" type="image/x-icon">
