--- a/L09_ClassCanvasStrand/CanvasBeach.html
+++ b/L09_ClassCanvasStrand/CanvasBeach.html
@@ -7,6 +7,7 @@
     <script src="../L09_ClassCanvasStrand/Classes/BeachVector.js"></script>
     <script src="../L09_ClassCanvasStrand/Classes/BeachCloud.js"></script>
     <script src="../L09_ClassCanvasStrand/Classes/BeachPalmTree.js"></script>
+    <script src="../L09_ClassCanvasStrand/Classes/BeachPeople.js"></script>
     <script src="../L09_ClassCanvasStrand/CanvasBeachMain.js"></script>
     <link rel="stylesheet" href="../L09_ClassCanvasStrand/CanvasBeach.css">
     <link rel="shortcut icon" href="../L08.1_Canvas/img/45117a_1x1.png" type="image/x-icon">
