--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -19,8 +19,9 @@
 	<!-- <a href="../L04_Thunkable/Thunkable - Mozilla Firefox 2022-05-02 20-13-50.mp4" target="_blank">Thunkable_ShoppingList_Video</a><br> -->
 	<a href="../L08.1_Canvas/generative_Art.html" target="_blank">L08.1_Generative Art, 6.5.22</a><br>
 	<a href="../L08.2_CanvasStrand/CanvasStrand.html" target="_blank">L08.2_Canvas Strand, 14.05.22</a><br>
-	<a href="../L09_Classes/L09.html" target="_blank">L09_Old McDonald Farm, 20.5.22 </a>
+	<a href="../L09_Classes/L09.html" target="_blank">L09_Old McDonald Farm, 20.5.22 </a><br>
 	<a href="../L09_ClassCanvasStrand/CanvasBeach.html" target="_blank">L9.2 Canvas Beach Animation, 04.06.22</a><br>
 	<a href="../L10.1_OldMacDonaldFarm Subclasses/Konzept/Konzept.html" target="_blank">L10.1 OldMacDonald Farm Subclasses, 04.05.22</a><br>
+	<a href="../L10.2_Beach_SuperC/Konzept/2022-06-25_Konzept_BeachClasses.drawio.pdf">L10.2_BeachSuperclass, Konzept (Teilweise Umsetzung in L9.2)</a>
 </body>
 </html>
