--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -22,6 +22,6 @@
 	<a href="../L09_Classes/L09.html" target="_blank">L09_Old McDonald Farm, 20.5.22 </a><br>
 	<a href="../L09_ClassCanvasStrand/CanvasBeach.html" target="_blank">L9.2 Canvas Beach Animation, 04.06.22</a><br>
 	<a href="../L10.1_OldMacDonaldFarm Subclasses/Konzept/Konzept.html" target="_blank">L10.1 OldMacDonald Farm Subclasses, 04.05.22</a><br>
-	<a href="../L10.2_Beach_SuperC/Konzept/2022-06-25_Konzept_BeachClasses.drawio.pdf">L10.2_BeachSuperclass, Konzept (Teilweise Umsetzung in L9.2)</a>
+	<a href="../L10.2_Beach_SuperC/Konzept/2022-06-25_Konzept_BeachClasses.drawio.pdf" target="_blank">L10.2_BeachSuperclass, Konzept (Teilweise Umsetzung in L9.2)</a>
 </body>
 </html>
