--- a/EIA_1_Endabgabe/learningSpanishLevel.html
+++ b/EIA_1_Endabgabe/learningSpanishLevel.html
@@ -28,7 +28,7 @@
     <main>
         <div id="GerSentence">Ich fahre Auto.</div>
         <div id="spanOutput">Im driving a car.</div>
-        <div id="rndmSpanSentence">driving car Im a</div>
+        <div id="rndmSpanSentence"></div>
     </main>
     <footer>
         <h2>Robin Knüttel</h2>
