--- a/L09_ClassCanvasStrand/CanvasBeach.html
+++ b/L09_ClassCanvasStrand/CanvasBeach.html
@@ -24,8 +24,13 @@
     <a class="font" href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_57_Pro.jpg" target="_blank">AD</a>
     <button id="reload">RELOAD</button>
     <canvas  width="2000" height="1200"></canvas>
+
+    <p class="font">WIndow Size:</p>
     <p class="font"  id="windowHeight"></p>
-    <p class="font" id="windowWidth"></p>
+    <p class="font" id="windowWidth"></p><br>
+    <p class="font">Canvas Size:</p>
+    <p class="font" id="canvasSize"></p><br>
+    <p class="font">Mouse: </p><p class="font" id="mousePos">Mouse Position</p>
     
 </body>
 </html>
