--- a/L09_ClassCanvasStrand/CanvasBeach.html
+++ b/L09_ClassCanvasStrand/CanvasBeach.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,23 +15,28 @@
     <link rel="shortcut icon" href="../L08.1_Canvas/img/45117a_1x1.png" type="image/x-icon">
     <title>Generative Art</title>
 </head>
+
 <body>
     <!-- <label for="PositionX">Position X</label>
     <input type="range" name="PositionX" id="SliderX" min="0" max="100" step="1">
     <label for="PositionY">Position Y</label>
     <input type="range" name="PositionY" id="SliderY" min="0" max="100" step="1"> -->
+    <canvas width="2000" height="1200"></canvas>
+
+    <p class="font">WIndow Size:</p>
+    <p class="font" id="windowHeight"></p>
+    <p class="font" id="windowWidth"></p><br>
+    <p class="font">Canvas Size:</p>
+    <p class="font" id="canvasSize"></p><br>
+    <p class="font">Mouse: </p>
+    <p class="font" id="mousePos">Mouse Position</p>
+
     <a class="font" href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_11_Pro.jpg" target="_blank">UI</a>
     <a class="font" href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_29_Pro.jpg" target="_blank">UI_2</a>
     <a class="font" href="../L08.2_CanvasStrand/img/WIN_20220514_15_07_57_Pro.jpg" target="_blank">AD</a>
     <button id="reload">RELOAD</button>
-    <canvas  width="2000" height="1200"></canvas>
+  
 
-    <p class="font">WIndow Size:</p>
-    <p class="font"  id="windowHeight"></p>
-    <p class="font" id="windowWidth"></p><br>
-    <p class="font">Canvas Size:</p>
-    <p class="font" id="canvasSize"></p><br>
-    <p class="font">Mouse: </p><p class="font" id="mousePos">Mouse Position</p>
-    
 </body>
+
 </html>
