--- a/L11_Beach_Polymorphie/CanvasBeach.html
+++ b/L11_Beach_Polymorphie/CanvasBeach.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../L09_ClassCanvasStrand/Classes/BeachVector.js"></script>
-    <script src="../L09_ClassCanvasStrand/Classes/BeachCloud.js"></script>
-    <script src="../L09_ClassCanvasStrand/Classes/BeachPalmTree.js"></script>
-    <script src="../L09_ClassCanvasStrand/Classes/BeachPerson.js"></script>
-    <script src="../L09_ClassCanvasStrand/Classes/BeachShip.js"></script>
-    <script src="../L09_ClassCanvasStrand/CanvasBeachMain.js"></script>
-    <link rel="stylesheet" href="../L09_ClassCanvasStrand/CanvasBeach.css">
-    <link rel="shortcut icon" href="../L08.1_Canvas/img/45117a_1x1.png" type="image/x-icon">
+    <script src="../L11_Beach_Polymorphie/Classes/BeachVector.js"></script>
+    <script src="../L11_Beach_Polymorphie/Classes/BeachCloud.js"></script>
+    <script src="../L11_Beach_Polymorphie/Classes/BeachPalmTree.js"></script>
+    <script src="../L11_Beach_Polymorphie/Classes/BeachPerson.js"></script>
+    <script src="../L11_Beach_Polymorphie/Classes/BeachShip.js"></script>
+    <script src="../L11_Beach_Polymorphie/CanvasBeachMain.js"></script>
+    <link rel="stylesheet" href="../L11_Beach_Polymorphie/CanvasBeach.css">
+    <link rel="shortcut icon" href="../L11_Beach_Polymorphie/img/45117a_1x1.png" type="image/x-icon">
     <title>Generative Art</title>
 </head>
 
