--- a/EIA_2_Endabgabe/index.html
+++ b/EIA_2_Endabgabe/index.html
@@ -25,7 +25,6 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
     <h1>Gemüse Garten</h1>
     <div id="wrapper">
         <div id="Fields"></div>
@@ -40,6 +39,7 @@
         <button id="Plant5">Plant5</button>
         <p id="Money"></p>
         <span></span>
+        <img id="parasite" src="../EIA_2_Endabgabe/img/parasit.png" alt="">
     </div>
 
 
