--- a/EIA_2_Endabgabe/index.html
+++ b/EIA_2_Endabgabe/index.html
@@ -21,7 +21,6 @@
     <script src="TimeBased/Pests.js"></script>
     <script src="Field.js"></script>
     <script src="Main.js"></script>
-    <link rel="stylesheet" href="Garden.css">
 </head>
 
 <body>
@@ -29,17 +28,29 @@
     <div id="wrapper">
         <div id="Fields"></div>
         <button id="Water"></button>
-        <button id="Fertilize"></button>
-        <button id="Pesticide"></button>
         <button id="Harvest"></button>
-        <button id="Plant1">Plant1</button>
-        <button id="Plant2">Plant2</button>
-        <button id="Plant3">Plant3</button>
-        <button id="Plant4">Plant4</button>
-        <button id="Plant5">Plant5</button>
-        <p id="Money"></p>
+
+       
         <span></span>
-        <img id="parasite" src="../EIA_2_Endabgabe/img/parasit.png" alt="">
+        <div id="market">
+            <h2>MARKET</h2>
+            <p class="center">Item</p><p class="center" >Buy</p><p class="center" >Sell</p>
+            <button id="Fertilize"></button>
+            <button id="Pesticide"></button>
+            <button id="Plant1">Plant1</button>
+            <button id="Plant2">Plant2</button>
+            <button id="Plant3">Plant3</button>
+            <button id="Plant4">Plant4</button>
+            <button id="Plant5">Plant5</button>
+            <p id="Money"></p>
+        </div>
+
+        <div id="statusBar">
+            <p id="typ"></p>
+            <div id="imgProduct"></div>
+            <p id="text"></p>
+        </div>
+
     </div>
 
 
