--- a/EIA_2_Endabgabe/index.html
+++ b/EIA_2_Endabgabe/index.html
@@ -36,13 +36,13 @@
         <div id="market">
             <h2>MARKET</h2>
             <p class="center">Item</p><p class="center" >Buy</p><p class="center" >Sell</p>
-            <button id="Fertilize"></button><p id="FertilizerPrice">5</p>
-            <button id="Pesticide"></button><p id="PesticedePrice">5</p>
-            <button id="Plant1">Plant1</button><p id="Plant1Buy">5</p><p id="Plant1Sell">10</p>
-            <button id="Plant2">Plant2</button><p id="Plant2Buy">5</p><p id="Plant2Sell">10</p>
-            <button id="Plant3">Plant3</button><p id="Plant3Buy">5</p><p id="Plant3Sell">10</p>
-            <button id="Plant4">Plant4</button><p id="Plant4Buy">5</p><p id="Plant4Sell">10</p>
-            <button id="Plant5">Plant5</button><p id="Plant5Buy">5</p><p id="Plant5Sell">10</p>
+            <button id="Fertilize"></button><p class="center" id="FertilizerPrice">5</p>
+            <button id="Pesticide"></button><p class="center" id="PesticedePrice">5</p>
+            <button id="Plant1">Plant1</button><p class="center" id="Plant1Buy">5</p><p class="center" id="Plant1Sell">10</p>
+            <button id="Plant2">Plant2</button><p class="center" id="Plant2Buy">5</p><p class="center" id="Plant2Sell">10</p>
+            <button id="Plant3">Plant3</button><p class="center" id="Plant3Buy">5</p><p class="center" id="Plant3Sell">10</p>
+            <button id="Plant4">Plant4</button><p class="center" id="Plant4Buy">5</p><p class="center" id="Plant4Sell">10</p>
+            <button id="Plant5">Plant5</button><p class="center" id="Plant5Buy">5</p><p class="center" id="Plant5Sell">10</p>
             <p id="Money"></p>
         </div>
 
