--- a/EIA_2_Endabgabe/index.html
+++ b/EIA_2_Endabgabe/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <h1>Gemüse Garten</h1>
+    <h1>VEGAN HEAVEN</h1>
     <div id="wrapper">
         <div id="Fields"></div>
         <button id="Water"></button>
