--- a/EIA_2_Endabgabe/index.html
+++ b/EIA_2_Endabgabe/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- EIA2 Edabgabe SoSe22, Gemüsegarten-Simulator
+Robin Knüttel
+269607
+19.07.2022
+In Zusammenarbeit mit Jason Hühne und Ilkan Özdemir. -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Endabgabe Jason Hühne</title>
+    <title>Endabgabe Robin Knüttel</title>
     <link rel="stylesheet" href="style.css">
     <script src="Market.js"></script>
     <script src="Plant.js"></script>
