--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -25,5 +25,10 @@
 	<a href="../L10.2_Beach_SuperC/Konzept/2022-06-25_Konzept_BeachClasses.drawio.pdf" target="_blank">L10.2_BeachSuperclass, Konzept (Teilweise Umsetzung in L9.2)</a><br>
 	<a href="../L11_Beach_Polymorphie/CanvasBeach.html" target="_blank">L11 Beach Polymorphie, 6.7.22</a><br>
 	<a href="../L11_Beach_Polymorphie/Konzept/2022-07-06_Konzept_BeachClasses.pdf" target="_blank">L11 Konzept, 6.7.22</a><br>
+	<h2>Endabgabe Gemüsegarten-Simulator</h2>
+	<a href="../EIA_2_Endabgabe/index.html" target="_blank">Endabgabe Gemüsegarten-Simulator, Anwendung</a><br>
+	<a href="../EIA_2_Endabgabe/Konzept/Gemüsegarten_Konzept.pdf" target="_blank">Endabgabe Gemüsegarten-Simulator, Designdokument</a><br>
+	<a href="https://github.com/DieErdnuss/EIA_2/tree/main/EIA_2_Endabgabe" target="_blank">Endabgabe Gemüsegarten-Simulator, Quellcode GitHub</a>
+	<a href="../EIA_2_Endabgabe/EIA_2_Endabgabe.zip" target="_blank">zip</a>
 </body>
 </html>
