--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -14,7 +14,7 @@
 	<a href="../EIA_2_Endabgabe/index.html" target="_blank">Endabgabe Gemüsegarten-Simulator, Anwendung, 19.07.22</a><br>
 	<a href="../EIA_2_Endabgabe/Konzept/Gemüsegarten_Konzept.pdf" target="_blank">Endabgabe Gemüsegarten-Simulator, Designdokument, 19.07.22</a><br>
 	<a href="https://github.com/DieErdnuss/EIA_2/tree/main/EIA_2_Endabgabe" target="_blank">Endabgabe Gemüsegarten-Simulator, Quellcode GitHub, 19.07.22</a><br>
-	<a href="https://github.com/DieErdnuss/EIA_2/tree/main/EIA_2_Endabgabe" target="_blank">Endabgabe Gemüsegarten-Simulator, Archiv-.zip, 19.07.22</a>
+	<a href="../EIA_2_Endabgabe/EIA_2_Endabgabe_Gemüsegarten-Simulator.zip" target="_blank">Endabgabe Gemüsegarten-Simulator, Archiv-.zip, 19.07.22</a>
 
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 	<a href="https://dieerdnuss.github.io/EIA_2/L01_Recap&Foundation/L01.1_RandomPoem/RandomPoem.html" target="_blank">L01.1 RandomPoem, 25.03.22</a><br>
